# MISRAForge

./: .gitignore  AGENTS_MILESTONES.md  CODEX_RUN_4H.md  LICENSE  README.md  TASK_MISRA_MILESTONES.md  misraforge.sh  pyproject.toml  run_tool.bat  run_tool.sh
docs/: ARCHITECTURE.md  ROADMAP.md  STATUS.md
samples/: custom_rules_demo.json  project_config.yaml  rule_content_local.example.json  rule_content_open.json  suppressions.yaml
samples/simple_repo/src/: main.c  util.cpp
src/misra_checker/: __init__.py
src/misra_checker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/misra_checker/api/: __init__.py  rule_content.py  server.py
src/misra_checker/baseline/: service.py
src/misra_checker/cli/: main.py
src/misra_checker/config/: loader.py  models.py
src/misra_checker/core/: models.py  scan_service.py
src/misra_checker/findings/: deviation.py  fingerprint.py
src/misra_checker/gui/: app.py
src/misra_checker/parser/: backends.py  discovery.py  models.py  service.py
src/misra_checker/plugins/: contracts.py
src/misra_checker/registry/: rule_registry.py
src/misra_checker/reports/: exporters.py  serializers.py
tests/: test_cli_help.py  test_config_loader.py  test_fingerprint.py  test_gui_entrypoint.py  test_parser_discovery.py  test_report_summary.py  test_rule_content_loader.py  test_rule_control_switch.py  test_rule_engine.py  test_rule_expansion.py  test_rule_matrix.py  test_rule_pack_json.py  test_scan_service.py  test_web_file_browser.py  test_workflow_controls.py
ui/: package-lock.json  vite.config.ts
ui/src/: App.css  App.tsx  index.css
(+21 files in other folders)
